fix: AZVM not showing OS because of falling out of bounds

--- a/src/components/SearchContainer/Tabs/NodeData.module.css
+++ b/src/components/SearchContainer/Tabs/NodeData.module.css
@@ -110,6 +110,10 @@ hr {
     font-weight: bold;
 }
 
+.dl table {
+    word-break: break-word;
+}
+
 .dark > .dl > h5 {
     color: white !important;
 }
